--- a/index.html
+++ b/index.html
@@ -24,13 +24,41 @@
           <div class="header__description">
             <h1>America's most awarded online library platform</h1>
             <h2>Find your dream book with <span class="purple">library</span></h2>
+            <button class="btn">Browse books</button>
           </div>
-          <figure>
-            <img class="undraw__pic" src="assets/Undraw_Books.svg" alt="">
+          <figure class="header__img--wrapper">
+            <img src="assets/Undraw_Books.svg" alt="">
           </figure>
         </div>
       </header>
     </section>
+
+    <main>
+      <section id="highlights">
+        <div class="container">
+          <div class="row">
+            <h2 class="section__title"></h2>
+            Why choose <span class="purple">Library</span>
+          </div>
+        </div>
+      </section>
+
+      <!-- <section id="features">
+        <div class="container">
+          <div class="row">
+
+          </div>
+        </div>
+      </section>
+
+      <section id="recent">
+        <div class="container">
+          <div class="row">
+
+          </div>
+        </div>
+      </section> -->  
+    </main> 
   </body>
 
 </html>
